# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Planned]
### Added
- Ability to skip specific folders and files during classification

## [Unreleased]

### Added

### Changed

**Changement de licence**
Ce projet passe de la licence MIT à la licence GPLv3.
Ce changement reflète notre engagement envers la transparence et le partage des modifications.
Pour plus de détails, consultez le fichier [LICENSE](LICENSE).

### Removed

## [0.1.1] - 2025-12-28

### Added

1. Add a Docusaurus documentation and write it
2. Add a pipeline (github action) to push documentation to github wiki

### Changed

1. Standardize FolderFlow binary to be named `ff`
    - `cmd/folderflow` -> `cmd/ff``
    - `.gitignore`, `README.md` and `.github/worflows/*.yaml` have been udated accordingly
2. Move go.yaml CI to ci.yaml to inlclude docs pkg build verification
3. Update config file flag for `--file` to `--config`
4. Update Pr-Release CI plugins

### Removed

## [0.1.0] - 2025-12-25

### Added

- Initial project documentation:
    - This CHANGELOG file to track notable changes.
    - A README explaining the project goals and usage.
    - MIT license.

- Document classification using **dynamic, plugin-based filters and strategies**, allowing custom extensions.
    - Support for multiple source directories.

    - **Built-in filters**
        - Filter files by extension.
        - Filter files using regex patterns.

    - **Built-in classification strategies**
        - Classify files based on last modification date.
        - Classify files based on source directory hierarchy.

    - Optional parallel execution to improve performance.
    - Execution statistics for classification runs.

    - **File conflict handling strategies**
        - Skip existing files.