@@ -17,7 +17,6 @@ import (
 	"log/slog"
 	"os"
 
-	"github.com/polocto/FolderFlow/internal/logger"
 	"github.com/spf13/cobra"
 )
 
@@ -25,40 +24,54 @@ type AppConfig struct {
 	DryRun bool
 }
 
-var verbose bool
 var debug bool
+var quiet bool
+var jsonLogs bool
 
 var cfg AppConfig
 
-var closeLogger func() error
-
 // rootCmd represents the base command when called without any subcommands
 var rootCmd = &cobra.Command{
-	Use:   "FolderFlow",
+	Use:   "folderflow",
 	Short: "Manage and organise your folder as you want",
 	Long:  "FolderFlow is a command-line tool that helps you filter and move image and video files from a source directory to specified destination folders (e.g., 'images/', 'videos/'), while keeping the original folder structure. It also supports creating a 'regroup' folder with symlinks or hard links to all moved files for easy access.",
 	// Uncomment the following line if your bare application
 	// has an action associated with it:
 	// Run: func(cmd *cobra.Command, args []string) { },
 	PersistentPreRunE: func(cmd *cobra.Command, args []string) error {
-		var err error
-		closeLogger, err = logger.Init(verbose, debug || os.Getenv("DEBUG") != "")
-		return err
+		var level slog.Level
+		var handler slog.Handler
+		switch {
+		case quiet:
+			level = slog.LevelError
+		case debug:
+			level = slog.LevelDebug
+		default:
+			level = slog.LevelInfo
+		}
+
+		if jsonLogs {
+			handler = slog.NewJSONHandler(os.Stderr, &slog.HandlerOptions{Level: level})
+		} else {
+			handler = slog.NewTextHandler(os.Stderr, &slog.HandlerOptions{Level: level})
+		}
+
+		logger := slog.New(handler).With(
+			"cmd", cmd.Name(),
+			"dry-run", cfg.DryRun,
+		)
+		slog.SetDefault(logger)
+
+		return nil
 	},
 }
 
 // Execute adds all child commands to the root command and sets flags appropriately.
 // This is called by main.main(). It only needs to happen once to the rootCmd.
 func Execute() error {
-	defer func() {
-		if closeLogger != nil {
-			if cerr := closeLogger(); cerr != nil {
-				slog.Warn("failed to close logger", "error", cerr)
-			}
-		}
-	}()
+	// Prevent Cobra from printing usage on runtime errors
+	rootCmd.SilenceUsage = true
 	if err := rootCmd.Execute(); err != nil {
-		slog.Error("command execution failed", "error", err)
 		return err
 	}
 	return nil
@@ -69,9 +82,12 @@ func init() {
 	// Cobra supports persistent flags, which, if defined here,
 	// will be global for your application.
 
-	rootCmd.PersistentFlags().BoolVarP(&verbose, "verbose", "v", false, "enable verbose logging")
 	rootCmd.PersistentFlags().BoolVar(&cfg.DryRun, "dry-run", false, "dry run (no changes)")
 	rootCmd.PersistentFlags().BoolVar(&debug, "debug", false, "enable debugging logs")
+	rootCmd.PersistentFlags().BoolVarP(&quiet, "quiet", "q", false, "suppress all logs except errors")
+	rootCmd.PersistentFlags().BoolVar(&jsonLogs, "json", false, "output logs in JSON format (only affects logs)")
+
+	rootCmd.MarkFlagsMutuallyExclusive("debug", "quiet")
 
 	// Cobra also supports local flags, which will only run
 	// when this action is called directly.
